--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": 
+  {
+    "LocadoraAPIConnection":"Server=OEM-PC\\SQLEXPRESS;Initial Catalog=LocadoraAPI;User ID=LocadoraAPI;Password=senha;"
+  }
 }
